# ROS2

./: .gitignore  Dockerfile  README.md  launch.sh  operator.sh  startup.sh  tmux.conf
.devcontainer/: devcontainer.json
ex00/: operator.sh
src/: drawing.py  main.py
task1/: Dockerfile  compose.yaml  operator.sh  start_turtle.sh
task1/ex00/: operator.sh
task1/ex01/: commands.md
task1/src/: main.py  new_turtle.py
task2/: README.md  compose.yaml  operator.sh
task2/ex03/: .gitignore
task2/ex04/: colcon_build.txt
task2/ex05/: rosnode_info.txt  rosnode_list.txt  run.sh
task2/ex06/: cmd_vel.txt  run.sh
task2/ex07/: parameter_server.txt  rosservice_list.txt  run.sh
task2/ex08/: launch.py  rqt_console.csv
task2/ex10/: run.sh
task2/src/: drawing.py
task3/: README.md  compose.yaml  operator.sh
task3/ex01/ros2_ws/: doctor.txt
task3/ex01/ros2_ws/src/service_full_name/: CMakeLists.txt  package.xml  setup.py
task3/ex01/ros2_ws/src/service_full_name/service_full_name/: client_name.py  service_name.py
task3/ex02/: run_turtle.sh
task3/ex02/ros2_turtle_ws/install/: local_setup.sh  setup.sh
task3/ex02/ros2_turtle_ws/log/: latest_build
task3/ex02/turtle_cmd_vel/: metadata.yaml  turtle_cmd_vel_0.mcap
task3/ex03/: doctor.txt
task3/ex05/ros2_ws/src/action_cleaning_robot/: CMakeLists.txt  package.xml  setup.py
task3/ex05/ros2_ws/src/action_cleaning_robot/action/: CleaningTask.action
task3/ex05/ros2_ws/src/action_cleaning_robot/action_cleaning_robot/: cleaning_action_client.py  cleaning_action_server.py
task4/: README.md  compose.yaml  operator.sh
task4/ex01/: frames_2025-10-30_02.33.55.gv  last_transform.txt  transform.txt
task4/ex02/: carrot.rviz
task4/ex02b/: carrot.rviz
task4/ex03/: race.rviz
task5/: Dockerfile  compose.yaml  run.md
task5/ex02/: .gitignore
task5/ex02/sam_bot_description/: CMakeLists.txt  package.xml
task6/: Dockerfile  compose.yaml  frames_2025-11-26_11.15.37.gv
(+88 files in other folders)
